# numerical-methods

./: .gitignore  README.md
Assignment1/: CMakeLists.txt
Assignment1/circuits/: circuit-1.txt  circuit-2.txt  circuit-3.txt  circuit-4.txt  circuit-5.txt
Assignment1/report/: main.tex
Assignment1/src/: CMakeLists.txt  cholesky.h  circuit-solver.cpp  finite-differences.cpp  main.cpp  mesh.cpp
Assignment1/test/: CMakeLists.txt  cholesky-test.cpp  circuit-solver-test.cpp  matrix-util-test.cpp  mesh-test.cpp  solver-test.cpp
Assignment2/: .clang-format  CMakeLists.txt
Assignment2/report/: main.tex
Assignment2/src/: CMakeLists.txt  SIMPLE2D_M.m  finite-differences.cpp  finite-differences.h  main.cpp  q2a.py  solver.h
Assignment2/test/: CMakeLists.txt  conjugate-gradient-test.cpp  matrix-test.cpp
Assignment3/: CMakeLists.txt
Assignment3/report/: main.tex
Assignment3/report/question-1/: q1_plot.m  q1a.csv  q1a.eps  q1b.csv  q1b.eps  q1c.csv  q1c.eps  q1data.csv
Assignment3/report/question-3/: error.eps  error_ratio.eps  q3-circuit.xml  q3_plot.m  q3b.csv  residual.eps  voltages.eps
Assignment3/report/question-4/: q4_plot.m  q4a.csv  q4a.eps  q4b.csv  q4b.eps  q4c.csv  q4c.eps
Assignment3/report/src/: integral.cpp  interpolation.cpp  interpolation.h  main.cpp  polynomial.cpp  polynomial.h
Assignment3/src/: CMakeLists.txt  integral.h  matrix.h  solver.cpp  solver.h
Assignment3/test/: CMakeLists.txt  float-test.cpp  float-test.h  integral-test.cpp  interpolation-test.cpp  matrix-solver-test.cpp  polynomial-test.cpp  solver-test.cpp
(+36 files in other folders)
